Fix plugin doesn't detect ShopGuiPlus